# testo-cross-platform

./: README.md  capacitor.config.ts  index.html  ionic.config.json  package-lock.json  package.json  vite.config.ts
.github/workflows/: tauri-android-build.yaml  tauri-build.yaml  tauri-desktop-build.yaml
public/: manifest.json
src/: App.tsx  AppContext.tsx  ionic-react-ts-workaround.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: desktop-window-state.json  dialog.json  filesystem.json  opener.json  os-information.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/components/: AnswersX.tsx  AnswersY.tsx  ContentWithImages.tsx  Settings.css  Settings.tsx  Timer.tsx
src/pages/: Home.css  Home.tsx  Quiz.css  Quiz.tsx  QuizStats.tsx
src/theme/: variables.css
src/utils/: arrayShuffle.ts  handleLoadQuizData.ts  parseQuestion.ts  parseQuizQuestion.ts  toggleIonDarkPalette.ts  useAppFontSize.ts  useAppZoom.ts  useDirectoryDragDrop.ts  useDragDrop.ts  useLatestAppRelease.ts  useLoadQuizData.ts  useQuizSettings.ts  useQuizState.ts  useRecentlyUsed.ts  useSaveQuizProgress.ts  useThemeAndUIStyle.ts  useTimer.ts
